--- a/src/pug/includes/layout.pug
+++ b/src/pug/includes/layout.pug
@@ -1,10 +1,12 @@
 include ../mixins/img
 include ../mixins/icon
+include ../../preloader/preloader
 
 block variables
 
 doctype html
 html(lang='ru')
   include ./head
-  body
+  body.body_hidden
     block content
+    +preloader
