--- a/src/pug/includes/head.pug
+++ b/src/pug/includes/head.pug
@@ -4,6 +4,8 @@ head
   title MPA frontend template
   meta(charset='utf-8')
   meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
+  link(rel='stylesheet' href=`css/preloader.css`)
+  script(src='js/preloader.js' defer)
   //- link(rel='stylesheet' href=`css/app.css?stamp=${stamp}`)
   //- script(src=`js/app.js?stamp=${stamp}` async)
   //- script(src=`js/assets.js?stamp=${stamp}` async)
