upd App on screen size

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -3,3 +3,5 @@ extends ../includes/layout
 block content
   main
     header: h1 Hello world!
+    p Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, laborum odio. Consequuntur modi quidem dignissimos!
+
