c4zgd9 btn style

--- a/src/style/includes/variables.scss
+++ b/src/style/includes/variables.scss
@@ -1,4 +1,16 @@
 
 :root {
   --easing: .3s ease-in-out;
+
+  //
+  --textColor: rgb(0, 0, 0);
+  --textContrast: #fff;
+
+  //
+  --primary: #2185d0;
+  --primaryContrast: #fff;
+
+  //
+  --secondary: #1b1c1d;
+  --secondaryContrast: #fff;
 }
