--- a/src/components/btn/btn.pug
+++ b/src/components/btn/btn.pug
@@ -1,21 +1,38 @@
 
+
 mixin btn(params={})
-  - const defaultParams = {}
-  - defaultParams.type = 'button'
-  - defaultParams.tag = 'button'
-  - defaultParams.disabled = false
-  - defaultParams.loading = false
-  - defaultParams.startIcon = null
-  - defaultParams.endIcon = null
-  - defaultParams.classes = ''
+  - const defaultParams = {
+  - type: 'button',
+  - tag: 'button',
+  - title: 'Кнопка',
+  - disabled: false,
+  - primary: false,
+  - secondary: false,
+  - fullWidth: false,
+  - loading: false,
+  - startIcon: null,
+  - size: '',
+  - endIcon: null,
+  - classes: '',
+  - }
 
   - const props = { ...defaultParams, ...params }
+  - let className = `btn ${props.classes || ''}`
 
-  #{props.tag}(type=props.type class=`btn ${classes || ''}`)&attributes(attributes)
-    if startIcon
-      span.btn__icon.btn__icon--start: startIcon
+  - if(props.primary) className += ` btn--primary`
+  - if(props.secondary) className += ` btn--secondary`
+  - if(props.fullWidth) className += ` btn--full-width`
+  - if(props.disabled) className += ` btn_disabled`
+  - if(props.loading) className += ` btn_loading`
+  - if(props.size && props.size !== 'normal') className += ` btn--${props.size}`
+
+  - const attrs = { ...attributes, class: className, disabled: props.disabled, type: props.type, title: props.title }
+
+  #{props.tag}&attributes(attrs)
+    if props.startIcon
+      span.btn__icon.btn__icon--start: #{props.startIcon}
 
     span.btn__text: block
 
-    if endIcon
-      span.btn__icon.btn__icon--end: endIcon
+    if props.endIcon
+      span.btn__icon.btn__icon--end: #{props.endIcon}
