--- a/src/components/btn/btn.scss
+++ b/src/components/btn/btn.scss
@@ -1,30 +1,125 @@
 .btn {
-  --height: 56px;
+  --paddingY: .5em;
+  --paddingX: 1em;
   --width: auto;
   --cursor: pointer;
-  --border-radius: 1px;
+  --border-radius: 3px;
   --border-width: 1px;
   --border-color: transparent;
   --position: relative;
-  --display: inline-flex;
+  --display: inline-block;
   --background-color: transparent;
+  --color: var(--textColor);
   --text-transform: none;
-  --transition: background-color var(--easing), color var(--easing), border-color var(--easing), box-shadow var(--easing);
+  --transition: background-color var(--easing), color var(--easing), border-color var(--easing), box-shadow var(--easing), opacity var(--easing);
 
+  color: var(--color);
   background-color: var(--background-color);
   cursor: var(--cursor);
   user-select: none;
   width: var(--width);
-  height: var(--height);
-  min-height: var(--height);
+  padding: var(--paddingY) var(--paddingX);
   border-radius: var(--border-radius);
   border: var(--border-width) solid var(--border-color);
   position: var(--position);
   display: var(--display);
   text-transform: var(--text-transform);
-  align-items: center;
-  text-align: center;
   transition: var(--transition);
   font-size: 1rem;
   line-height: 1em;
+  min-height: 1rem;
+  text-decoration: none;
+  font-family: inherit;
+
+  &--small {
+    --paddingY: .25em;
+    --paddingX: .5em;
+  }
+
+  &--large {
+    --paddingY: 1em;
+    --paddingX: 1.5em;
+  }
+
+  &--primary {
+    --background-color: var(--primary);
+    --color: var(--primaryContrast);
+  }
+
+  &--secondary {
+    --background-color: var(--secondary);
+    --color: var(--secondaryContrast);
+  }
+
+  &--full-width {
+    width: 100%;
+  }
+
+  &_disabled {
+    pointer-events: none;
+    cursor: not-allowed;
+    opacity: .6;
+  }
+
+  &_loading {
+    pointer-events: none;
+    cursor: wait;
+
+    .btn__text {
+      opacity: 0;
+    }
+
+    &:before {
+      position: absolute;
+      content: '';
+      top: 50%;
+      left: 50%;
+      margin: -.7em -.7em;
+      width: 1em;
+      height: 1em;
+      border-radius: 50%;
+      border: .2em solid rgba(0, 0, 0, .15);
+    }
+
+    &:after {
+      position: absolute;
+      content: '';
+      top: 50%;
+      left: 50%;
+      margin: -.7em -.7em;
+      width: 1em;
+      height: 1em;
+      animation: spinner .6s linear infinite;
+      border-radius: 50%;
+      border-color: #fff transparent transparent;
+      border-style: solid;
+      border-width: .2em;
+      -webkit-box-shadow: 0 0 0 1px transparent;
+      box-shadow: 0 0 0 1px transparent;
+    }
+  }
+
+  &:hover {
+    opacity: .8;
+  }
+
+  &:active {
+    opacity: .6;
+    outline: none;
+  }
+
+  &:focus {
+    opacity: 1;
+  }
+
+  // дочерние элементы
+
+  &__icon {
+    fill: currentColor;
+    display: block;
+  }
+}
+
+@keyframes spinner {
+  to { transform: rotate(360deg); }
 }
