e731tw component loader

--- a/.storybook/components.scss
+++ b/.storybook/components.scss
@@ -1,2 +1,3 @@
 
-@import '../src/components/btn/btn.scss'
+@import '../src/components/btn/btn.scss';
+@import '../src/components/loader/loader.scss';
