--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -9,7 +9,8 @@
 @import './includes/initial_parameters.scss';
 
 // components
-@import '../components//btn/btn.scss';
+@import '../components/btn/btn.scss';
+@import '../components/loader/loader.scss';
 
 /*
 Шпаргалка
