--- a/src/components/btn/btn.scss
+++ b/src/components/btn/btn.scss
@@ -61,6 +61,10 @@
     opacity: .6;
   }
 
+  &__loader {
+    opacity: 0;
+  }
+
   &_loading {
     pointer-events: none;
     cursor: wait;
@@ -69,33 +73,8 @@
       opacity: 0;
     }
 
-    &:before {
-      position: absolute;
-      content: '';
-      top: 50%;
-      left: 50%;
-      margin: -.7em -.7em;
-      width: 1em;
-      height: 1em;
-      border-radius: 50%;
-      border: .2em solid rgba(0, 0, 0, .15);
-    }
-
-    &:after {
-      position: absolute;
-      content: '';
-      top: 50%;
-      left: 50%;
-      margin: -.7em -.7em;
-      width: 1em;
-      height: 1em;
-      animation: spinner .6s linear infinite;
-      border-radius: 50%;
-      border-color: #fff transparent transparent;
-      border-style: solid;
-      border-width: .2em;
-      -webkit-box-shadow: 0 0 0 1px transparent;
-      box-shadow: 0 0 0 1px transparent;
+    .btn__loader {
+      opacity: 1;
     }
   }
 
