e71jf2 component text

--- a/.storybook/components.scss
+++ b/.storybook/components.scss
@@ -1,3 +1,4 @@
 
+@import '../src/components/text/text.scss';
 @import '../src/components/btn/btn.scss';
 @import '../src/components/loader/loader.scss';
