--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -9,6 +9,7 @@
 @import './includes/initial_parameters.scss';
 
 // components
+@import '../components/text/text.scss';
 @import '../components/btn/btn.scss';
 @import '../components/loader/loader.scss';
 
