--- a/src/style/includes/typography.scss
+++ b/src/style/includes/typography.scss
@@ -1,25 +1,25 @@
 // typography
 
-h1 {
-  font-size: rem(24);
-}
+// h1 {
+//   font-size: rem(24);
+// }
 
-h2 {
-  font-size: rem(22);
-}
+// h2 {
+//   font-size: rem(22);
+// }
 
-h3 {
-  font-size: rem(18);
-}
+// h3 {
+//   font-size: rem(18);
+// }
 
-h4 {
-  font-size: rem(16);
-}
+// h4 {
+//   font-size: rem(16);
+// }
 
-h5 {
-  font-size: rem(12);
-}
+// h5 {
+//   font-size: rem(12);
+// }
 
-h6 {
-  font-size: rem(10);
-}
+// h6 {
+//   font-size: rem(10);
+// }
